--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="footer.css">
 </head>
 <body>
     <div class="layout">
@@ -14,7 +15,9 @@
             <header></header>
             <div class="cards-list"></div>
             <div class="menu-photos"></div>
-            <footer></footer>
+            <footer>
+                <span class="fas fa-copyright"></span> My Awesome Restaurant
+            </footer>
         </div>
     </div>
     <script src="main.js"></script>
